--- a/.gitignore
+++ b/.gitignore
@@ -29,10 +29,11 @@ test_project
 .DS_Store
 
 # LaTeX
-.fls
-.fds_latexmk
-.log
-.bbl
-.aux
-.tex.bak
-.bib.bak
+*.blg
+*.fls
+*.fds_latexmk
+*.log
+*.bbl
+*.aux
+*.tex.bak
+*.bib.bak
